完成供热收费管理模块的model by 黄宇德

--- a/ht/src/main/resources/application.yml
+++ b/ht/src/main/resources/application.yml
@@ -35,19 +35,16 @@ spring:
   
 #mybatis配置   
 mybatis:
-   mapper-locations: classpath:mapping/*Mapper.xml
-   type-aliases-package: com.example.entity
- 
+  mapper-locations:
+  #- classpath*:/mappers/**/*Mapper.xml
+  type-aliases-package:
+    #com.neusoft.ht
+
+  
 #showSql
 logging:
   level:
-    com:
-      example:
-        mapper : debug
-
-
-
-
+    com.neusoft.ht.heating.mapper: debug
 
 
 
